# cpp-fs

./: .gitignore  README.md
.github/workflows/: build-and-test.yml  check-codestyle.yml
balancer/: README.md  balancer.py  storages.yaml
cpp-fs/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  conanfile.txt  settings_user.yml
cpp-fs/balancer/: CMakeLists.txt
cpp-fs/balancer/balancer/: CMakeLists.txt  balancer.cpp  balancer.hpp  main.cpp
cpp-fs/balancer/tests/: CMakeLists.txt  test_balancer.cpp
cpp-fs/cmake/: BuildOptions.cmake  PreventInSourceBuilds.cmake
cpp-fs/profiles/: asan
cpp-fs/storage/: CMakeLists.txt
cpp-fs/storage/storage/: CMakeLists.txt  error_types.h  main.cpp  storage.cpp  storage.hpp
cpp-fs/storage/storage/include/: httplib.hpp
cpp-fs/storage/storage/partition/: in_memory_partition.hpp  on_disk_partition.hpp  partition.hpp
cpp-fs/storage/storage/server/: server.cpp  server.hpp
cpp-fs/storage/test/: CMakeLists.txt  test_partition.cpp  test_storage.cpp
docker/: Dockerfile  run.sh
py-client/: terminal.py
web-storage/: .env  jsconfig.json  package.json
web-storage/src/components/: terminal.js
web-storage/src/config/: index.js
web-storage/src/pages/: _app.js  index.js
